# cs248a-asst1

./: .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml
docs/: assignment1.md  installation.md  interactive-renderer.md
notebooks/assignment1-part1/: ray-triangle-intersection.ipynb
notebooks/assignment1-part1/shaders/: assignment1.slang
notebooks/assignment1-part2/: bvh.ipynb  ray-sdf-intersection.ipynb  ray-volume-intersection.ipynb
notebooks/assignment1-part2/shaders/: assignment1.slang  bvh_vis.slang
src/cs248a_renderer/: __init__.py  __main__.py
src/cs248a_renderer/gui/: app.py  dockspace.py  preview.py  renderer.py  scene_editor.py
src/cs248a_renderer/model/: bounding_box.py  bvh.py  cameras.py  mesh.py  primitive.py  scene.py  scene_object.py  transforms.py  volumes.py
src/cs248a_renderer/renderer/: core_renderer.py  mesh_renderer.py  wireframe_renderer.py
src/cs248a_renderer/slang_shaders/: material.slang  math.slang  model.slang  primitive.slang  renderer.slang  texture.slang  utils.slang
src/cs248a_renderer/slang_shaders/gui/: mesh.slang  wireframe.slang
src/cs248a_renderer/slang_shaders/material/: simple_material.slang
src/cs248a_renderer/slang_shaders/math/: bounding_box.slang  linalg.slang  quaternion.slang  ray.slang
src/cs248a_renderer/slang_shaders/model/: bvh.slang  camera.slang
src/cs248a_renderer/slang_shaders/primitive/: sdf.slang  triangle.slang  volume.slang
src/cs248a_renderer/slang_shaders/texture/: texture.slang
src/cs248a_renderer/view_model/: scene_manager.py
(+1 files in other folders)
